[tool.poetry]
name = "zood"
version = "0.14.2"
description = "web page documentation & comment generation documentation"
license = "MIT"
authors = ["kamilu <luzhixing12345@163.com>"]
readme = "README.md"
repository = "https://github.com/luzhixing12345/zood"
documentation = "https://luzhixing12345.github.io/zood/"


[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "6.0.2"
MarkdownParser = "^0.5.38"
syntaxlight = '^0.1.55'
watchdog = "^6.0.0"
websockets = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zood = 'zood.main:main'
